try to fix "contrast issue"

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -49,6 +49,7 @@
     border: none;
     background-color: var(--primary-color);
     color: white;
+    font-weight: bold;
     padding: 6px 18px;
     border-radius: 7px;
     font-size: 1rem;
