--- a/src/styles/newVenue.module.css
+++ b/src/styles/newVenue.module.css
@@ -35,6 +35,7 @@ h1 {
     min-width: 180px;
     border: 0;
     border-radius: 8px;
+    font-weight: bold;
 }
 
 .postButton:hover {
