--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -58,6 +58,7 @@ h1:hover {
     padding: 6px 18px;
     border-radius: 7px;
     font-size: 1rem;
+    font-weight: bold;
 }
 
 .edit:hover {
@@ -195,6 +196,7 @@ h2 {
     padding: 8px 18px;
     border-radius: 7px;
     font-size: 1.1rem;
+    font-weight: bold;
 }
 
 .createButton:hover {
