--- a/src/styles/updateVenue.module.css
+++ b/src/styles/updateVenue.module.css
@@ -36,6 +36,7 @@
     min-width: 180px;
     border: 0;
     border-radius: 8px;
+    font-weight: bold;
 }
 
 .updateButton:hover {
